fix: workflow en raíz y limpieza de v2.0/.github

--- a/.github/workflows/update-media-index.yml
+++ b/.github/workflows/update-media-index.yml
@@ -2,7 +2,7 @@ name: Update media index
 
 on:
   push:
-    branches: [ main ]   # ← ajusta si tu rama por defecto no es 'main' (p. ej. 'master')
+    branches: [ main ]
     paths:
       - 'v2.0/media/**'
       - 'v2.0/tools/gen_media_index.mjs'
@@ -11,20 +11,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # necesario para poder commitear cambios
-
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-
       - name: Generate media index
         run: node v2.0/tools/gen_media_index.mjs
-
       - name: Commit updated index.json (if changed)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
